--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,40 @@
     transform: rotate(360deg);
   }
 }
+
+nav ul {
+  text-align: left;
+  display: flex;
+  list-style: none;
+  margin: 20;
+  padding: 20;
+  overflow: hidden;
+  background-color: #333;
+  gap: 1rem;
+}
+
+nav li {
+  display: inline;
+}
+nav a {
+  display: block;
+  color: rgb(33, 8, 92);
+  text-align: center;
+  font-weight: bold;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+nav a:hover {
+  background-color: #111;
+  color: white;
+}
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
